--- a/index.css
+++ b/index.css
@@ -1,208 +1,127 @@
-.App {
-    text-align: center;
-  }
-  
-  .container {
-    position: relative;
-    text-align: left;
-    width: 100%;
+body {
+  margin: 0;
+  float: none;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.hero-searchbar {
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  border: 2px solid red;
+  min-height: 589px;
+  /* background: url(./assets/Hero\ -\ Desktop.jpg) no-repeat center;
+  background-size: 100% 220px; */
+  max-width: min-content;
+}
+
+.hero-img {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  object-fit: cover;
+  height: 220px;
+  width: 100%;
+}
+
+.hero-container {
+  padding-left: 30px;
+  padding-bottom: 80px;
+  text-align: left;
+  color: white;
+  border: 2px solid blue;
+  background-color: #2b2d33;
+}
+
+.hero-container > h1 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.hero-container > p {
+  font-size: 20px;
+}
+
+.hero-container > p:nth-child(3) {
+  text-decoration: underline;
+}
+
+.hero-container > h2 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.search-container {
+  width: 327px;
+  height: 10px;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+}
+
+.search-container > i {
+  font-size: 20px;
+  color: black;
+}
+
+.search-container > input {
+  flex: 1;
+  height: 40px;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  padding-left: 10px;
+  padding-top: 5px;
+}
+
+.hero-offer-tiles {
+  position: absolute;
+  left: 22%;
+  top: 55%;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-container > div {
+  justify-content: center;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.icon-heading {
+  display: flex;
+  padding-bottom: 30px;
+}
+
+@media screen and (min-width: 1440px) {
+  .hero-searchbar {
     min-height: 746px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
   .hero-img {
-    min-height: 746px;
-    width: 100%;
+    width: 1440px;
+    height: 746px;
   }
-  .hero-headline {
-    position: absolute;
-    color: white;
-    top: 20%;
-    left: 6.5rem;
-  }
-  .container h1 {
-    margin: 0;
-    padding-bottom: 30px;
-    font-size: 64px;
-    font-weight: bold;
+  .hero-container {
+    position: relative;
+    margin-top: -600px;
+    left: 10%;
+    background-color: transparent;
   }
 
-  .container p {
-    margin: 0;
-    font-size: 24px;
-    padding-bottom: 30px;
-  }
-
-  .container p:nth-child(3) {
-    font-size: 20px;
-    text-decoration: underline;
-    padding-bottom: 20px;
-  }
-
-  .container h1:nth-child(5) {
-    padding-top: 120px;
-    font-size: 30px;
-  } 
-
-  .box {
-    width: 475px;
-    height: 10px;
-    background-color: white;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    padding: 20px;
-  }
-
-  .box > i {
-    font-size: 20px;
-    color: black;
-  }
-
-  .box > input {
+  .flex-container > div {
     flex: 1;
-    height: 40px;
-    border: none;
-    outline: none;
-    font-size: 18px;
-    padding-left: 10px;
-    padding-top: 5px;
   }
 
-  /* 100% width up until width of 1440px and center image */
-  @media screen and (min-width: 1440px) {
-    .container {
-        width: 50%;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
+  .flex-container {
+    flex-basis: auto;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    border: 2px solid pink;
   }
 
-  /* if the screen size height is minimum 589px, then alter image size */
-  @media screen and (max-height: 589px) {
-    .container {
-        max-height: 589px;
-        width: 100% 
-    }
-    .hero-headline {
-        padding: 30px;
-        background-color: #2b2d33;
-        position: relative;
-        left: 0px;
-        right: 0px;
-        width: 100%
-    }
-
-    .container h1 {
-        font-size: 32px;
-    }
-
-    .container p {
-        font-size: 20px;
-    }
-
-    .box {
-        width: 327px;
-        height: 30px;
-    }
-    .container h1:nth-child(5) {
-        padding-top: 30px;
-        font-size: 30px;
-    } 
-    .hero-img {
-        max-height: 220px;
-    }
-  }
-  
-  /* if aspect ratio of space does not match 16:9 (my estimate) then crop and center */
-  @media not all and (aspect-ratio: 16/9) {
-    .hero-img {
-        object-fit: cover;
-    }
-  }
-
-  
-  /* .hero-headline {
-    border: 2px solid green;
-    position: absolute;
-    left: 100px;
-    top: 160px;
-  }
-  
-  .hero-headline h2 {
-    padding: 30px;
-    border: 2px solid red;
-    margin: auto;
-    text-align: center;
-    font-size: 4.44vw;
-    font-weight: bold;
-    color: white;
-  }
-  
-  .hero-headline p {
-    border: 2px solid blue;
-    padding-left: 30px;
-    color: white;
-    text-align: left;
-    font-size: 1.66vw;
-    margin: auto;
-  } */
-  
-  /* @media screen and (min-width: 1440px) {
-    .hero-img {
-        width:50%;
-        text-align: center;
-    }
-    body {
-      background-color: brown;
-    }
-    /* add aspect ratio shit */
-  
-  /* @media screen and (max-height: 589px) {
-    .hero-img {
-      height: 220px;
-      width: 100%  
-    }
-  
-    body {
-      background-color: pink;
-    }
-  } */ 
-  
-  /* Maximum aspect ratio */
-  
-  
-  /* .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
-  }
-  
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-  
-  .App-link {
-    color: #61dafb;
-  }
-  
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  } */
+}
