--- a/index.css
+++ b/index.css
@@ -81,16 +81,19 @@ body {
   text-align: left;
   display: flex;
   flex-direction: column;
-  position: absolute;
-  left: 19%;
-  top: 55%;
 }
 
-.flex-container > div {
+.flex-children-container {
+  border: 2px solid blue;
+  width: min-content;
+  margin: 0 auto;
+}
+
+/* .flex-container > div {
   justify-content: center;
   border-radius: 10px;
   margin: 10px;
-}
+} */
 
 .icon-heading {
   display: flex;
@@ -143,8 +146,6 @@ body {
   }
 
   .flex-container {
-    position: relative;
-    left: 0%;
     flex-direction: row;
     justify-content: center;
   }
